--- a/index.html
+++ b/index.html
@@ -134,6 +134,22 @@
               <a href="#" class="btn btn-primary menu" id="menuPerum">Desain Perumahan</a>
             </div>
             <div id="content"></div>
+            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+              <div class="btn-group me-2" role="group" aria-label="First group">
+                <button type="button" class="btn btn-primary">1</button>
+                <button type="button" class="btn btn-primary">2</button>
+                <button type="button" class="btn btn-primary">3</button>
+                <button type="button" class="btn btn-primary">4</button>
+              </div>
+        </section>
+        <section class="banefit">
+          <h2>Pembangunan Dengan Kami</h2>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Harga Bangun Bisa Anda Tentukan Sendiri</li>
+            <li class="list-group-item">Harga Bangun Bisa Disesuaikan dengan Budget Anda</li>
+            <li class="list-group-item">Spek Bangun Anda Bisa Anda Tentukan Sendiri</li>
+            <li class="list-group-item">Pembangunan Kami Mengutamakan Transparasi dalam Proses Pembangunan</li>
+          </ul>
         </section>
     </main>
     <!-- Footer -->
