Insert Google Maps

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <a href="#" class="btn btn-primary menu" id="menuPerum">Desain Perumahan</a>
             </div>
             <div id="content"></div>
-            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+            <div class="btn-toolbar  d-flex justify-content-center" role="toolbar" aria-label="Toolbar with button groups">
               <div class="btn-group me-2" role="group" aria-label="First group">
                 <button type="button" class="btn btn-primary">1</button>
                 <button type="button" class="btn btn-primary">2</button>
@@ -150,6 +150,17 @@
             <li class="list-group-item">Spek Bangun Anda Bisa Anda Tentukan Sendiri</li>
             <li class="list-group-item">Pembangunan Kami Mengutamakan Transparasi dalam Proses Pembangunan</li>
           </ul>
+        </section>
+        <section class="harga">
+          
+        </section>
+        <section class="maps">
+          <div class="mapouter">
+            <div class="gmap_canvas">
+              <iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=6%C2%B058'13.1%22S%20108%C2%B032'31.6%22E&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+              </iframe>
+            </div>
+          </div>
         </section>
     </main>
     <!-- Footer -->
