--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
       <header>
         <div class="p-5 mb-4">
             <div class="container-fluid py-5">
-                <div>
+                <div class="col">
                     <h1 class="display-5 fw-bold">Arsitektur</h1>
-                    <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+                    <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap.</p>
                     <button class="btn btn-primary btn-lg" type="button" onclick="window.location.href='#example';">Pesan Sekarang</button>
                 </div>
-              <img src="img/ilustration.jpg" alt="ilustration">
+              <img class="img-fluid" src="img/ilustration.png" alt="ilustration">
             </div>
           </div>
       </header>
@@ -281,7 +281,7 @@
   
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-      © 2021 Copyright:
+      © 2023 Copyright:
       <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
     </div>
     <!-- Copyright -->
